Prevent showing a horizontal scroll bar on player-options if the browser width was beneath a certain threshold

--- a/WebHostLib/static/styles/playerOptions/playerOptions.css
+++ b/WebHostLib/static/styles/playerOptions/playerOptions.css
@@ -3,6 +3,7 @@ html {
   background-image: url("../../static/backgrounds/grass.png");
   background-repeat: repeat;
   background-size: 650px 650px;
+  overflow-x: hidden;
 }
 
 #player-options {
